# owswims

./: .clinerules  .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .graphqlconfig  .sops.yaml  CLAUDE.md  Dockerfile  EVENT_PROCESSING_GUIDE.md  GITHUB_MIGRATION.md  GITHUB_REPOSITORY_SETUP.md  LICENSE  Readme.md  Taskfile.yml  dataSources.txt  deploy-github.sh  deploy.sh  docker-compose.yml  japan-events.txt  migration_plan.md  schema.graphql  schema.json
backend/: .gitignore  Dockerfile  README_DJANGO_Q.md  crawl_all_states.py  manage.py  pyproject.toml  pytest.ini  test_mutations.py
backend/_docker/: entrypoint.sh
backend/app/: admin.py  apps.py  instrumentation.py  middleware.py  models.py  organizer_admin.py  schema.py  services.py  signals.py  tasks.py  tasks_hooks.py  tests.py  views.py
backend/app/crawl_profiles/: README.md  __init__.py  calendarioaguasabiertas.json  example_with_custom_prompt.json  outdoorswimmer.json  profiles.py  schwimmkalender_de.json
backend/app/data/: Events France - Sheet1.csv  Traversate a nuoto 2020 _ Anatre Selvagge.html  countries_it.csv  marketing_email_templates.json  table_translations.json
backend/app/graphql/: auth.py  mutations.py  queries.py
backend/app/importer/: traversate.py
backend/app/management/commands/: README.md  README_DISCOVER_EVENTS.md  copy_to_next_year.py  crawl_events.py  discover_event_urls.py  export_events.py  fetch_analytics.py  find_organizer_contacts.py  fix_race_currencies.py  geocode.py  identify_crawl_sources.py  import_france.py  import_from_url.py  import_gpx.py  import_kml.py  import_marnaton.py  import_russia.py  import_spain.py  inform_organizers.py  list_crawl_profiles.py  llm_crawl.py  merge_events.py  merge_locations.py  populate_organizer_slugs.py  process_unverified_locations.py  scrapy_import.py  send_marketing_emails.py  smart_merge_events.py  test_event_discovery.py  translate_messages.py  traversate.py  update_crawl_sources.py  update_next_year_events.py
backend/app/management/templates/: event_extraction_prompt.txt
backend/app/mcp/: __init__.py  schemas.py  server.py  utils.py
backend/app/mcp/tests/: test_fuzzy_search.py
backend/app/mcp/tools/: __init__.py  events.py  locations.py  organizers.py  races.py
backend/app/migrations/: 0001_initial.py  0002_auto_20201018_1607.py  0003_event_location.py  0004_race_date.py  0005_auto_20201018_1621.py  0006_auto_20201018_1622.py  0007_auto_20201030_2221.py  0008_auto_20201126_2057.py  0009_auto_20201128_2148.py  0010_auto_20201129_1712.py  0011_event_verified_at.py  0012_auto_20201206_0854.py  0013_auto_20201206_0924.py  0014_auto_20201206_2059.py  0015_event_entry_quality.py  0016_auto_20201213_1809.py  0017_auto_20201213_1818.py  0018_auto_20201213_2059.py  0019_auto_20201213_2101.py  0020_auto_20201219_1720.py  0021_auto_20201223_2132.py  0022_event_invisible.py  0023_event_flyer_image.py  0024_auto_20210104_2019.py  0025_auto_20210104_2022.py  0026_remove_event_water_type.py  0027_race_coordinates.py  0028_event_slug.py  0029_auto_20210117_1016.py  0030_organizer_logo.py  0031_organizer_slug.py  0032_auto_20210204_0737.py  0033_auto_20210207_1701.py  0034_auto_20210213_1949.py  0035_auto_20210403_0805.py  0036_review.py  0037_auto_20210618_2120.py  0038_auto_20210618_2121.py  0039_auto_20210625_2124.py  0040_location_average_rating.py  (+17 more)
backend/app/services/: __init__.py  email_service.py  event_crawler.py  event_processor.py  geocoding_service.py  google_analytics_service.py  llm_service.py  organizer_contact_service.py  scraping_service.py  smart_merge_models.py
backend/app/services/templates/: event_extraction_prompt.txt
backend/app/static/js/admin/: EventAdmin.js
backend/app/templates/admin/: base_site.html  compose_email.html  merge_organizers.html
backend/app/templates/claim/: already_claimed.html  invalid_token.html  set_password.html
backend/app/templates/organizer_admin/: login.html
backend/app/utils/: url_utils.py
backend/django_google_maps/: fields.py  widgets.py
backend/django_google_maps/static/django_google_maps/css/: google-maps-admin.css
backend/django_google_maps/static/django_google_maps/js/: google-maps-admin.js
backend/django_google_maps/templates/django_google_maps/widgets/: map_widget.html
backend/locale/de/LC_MESSAGES/: django.mo  django.po
backend/locale/es/LC_MESSAGES/: django.mo  django.po
backend/locale/fr/LC_MESSAGES/: django.mo  django.po
backend/locale/it/LC_MESSAGES/: django.mo  django.po
backend/locale/ja/LC_MESSAGES/: django.mo  django.po
backend/locale/ru/LC_MESSAGES/: django.mo  django.po
backend/owswims/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/templates/admin/: clear_cache.html  crawl_single_event.html  index.html
backend/templates/admin/app/event/: change_list.html
data/: traversate2020.txt
docs/: LLM_AGENT_GRAPHQL_ANLEITUNG.md  (+1 more)
(+177 files in other folders)
