[tool.poetry]
name = "owswims"
version = "0.1.0"
description = "Backend for databaes of Open Water Swims"
authors = ["Silvan Muehlemann <silvan.muehlemann@muehlemann-popp.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
django-countries = "^6.1.3"
psycopg2-binary = "^2.8.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
dateparser = "^0.7.6"
flake8 = "^3.8.4"
googlemaps = "^4.4.2"
graphene-django = "^2.13.0"
django-filter = "^2.4.0"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
graphene-django-optimizer = "^0.7.1"
Scrapy = "^2.4.1"
django-money = "^1.2.1"
django-crum = "^0.7.9"
django-storages = {extras = ["google"], version = "^1.11"}
Pillow = "^8.0.1"
django-clone = "^1.1.10"
django-graphql-jwt = "0.3.0"
django-graphql-auth = "^0.3.15"
PyJWT = "1.7.1"
gpxpy = "^1.4.2"
pykml = "^0.2.0"
django-sitemaps = "^1.1.1"
django-admin-list-filter-dropdown = "^1.0.3"
sparkpost = "^1.3.6"
gql = "^2.0.0"
google-api-python-client = "^2.1.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest-django = "^4.0.0"
pytest-sugar = "^0.9.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
