[tool.poetry]
name = "owswims"
version = "0.1.0"
description = "Backend for databaes of Open Water Swims"
authors = ["Silvan Muehlemann <silvan.muehlemann@muehlemann-popp.ch>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "~3.2.0"
django-countries = "^7.2.1"
psycopg2-binary = "^2.8.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
dateparser = "^0.7.6"
googlemaps = "^4.4.2"
graphene-django = "~2.15.0"
django-filter = "^2.4.0"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
graphene-django-optimizer = "^0.7.1"
# Scrapy dependency removed
django-money = "^1.2.1"
django-crum = "^0.7.9"
django-storages = {extras = ["google"], version = "^1.11"}
Pillow = "^9.0.0"
django-clone = "^1.1.10"
django-graphql-jwt = "0.3.0"
django-graphql-auth = "^0.3.15"
PyJWT = "1.7.1"
gpxpy = "^1.4.2"
pykml = "^0.2.0"
django-sitemaps = "^1.1.1"
django-admin-list-filter-dropdown = "^1.0.3"
sparkpost = "^1.3.6"
gql = "^2.0.0"
google-api-python-client = "^2.1.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
sentry-sdk = "^1.1.0"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
thefuzz = "^0.20.0"
python-levenshtein = "^0.26.1"
django-q = "^1.3.9"
pycountry = "^23.12.11"
llama-index = "^0.10.0"
firecrawl = "^1.15.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.0.0"
pytest-sugar = "^0.9.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
