[project]
name = "owswims"
version = "0.1.0"
description = "Backend for database of Open Water Swims"
authors = [
    {name = "Silvan Muehlemann", email = "silvan.muehlemann@muehlemann-popp.ch"}
]
requires-python = ">=3.11"
dependencies = [
    "Django~=3.2.0",
    "django-countries>=7.2.1",
    "psycopg2-binary>=2.8.6",
    "requests>=2.24.0",
    "beautifulsoup4>=4.9.3",
    "dateparser>=0.7.6",
    "googlemaps>=4.4.2",
    "graphene-django~=2.15.0",
    "django-filter>=2.4.0",
    "django-cors-headers>=3.5.0",
    "django-environ>=0.4.5",
    "whitenoise>=5.2.0",
    "graphene-django-optimizer>=0.7.1",
    "django-money>=1.2.1",
    "django-crum>=0.7.9",
    "django-storages[google]>=1.11",
    "Pillow>=9.0.0",
    "django-clone>=1.1.10",
    "django-graphql-jwt==0.3.0",
    "django-graphql-auth>=0.3.15",
    "PyJWT==1.7.1",
    "gpxpy>=1.4.2",
    "pykml>=0.2.0",
    "django-sitemaps>=1.1.1",
    "django-admin-list-filter-dropdown>=1.0.3",
    "sparkpost>=1.3.6",
    "gql>=2.0.0",
    "google-api-python-client>=2.1.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.4",
    "sentry-sdk>=1.1.0",
    "uvicorn>=0.14.0",
    "gunicorn>=20.1.0",
    "thefuzz>=0.20.0",
    "python-levenshtein>=0.26.1",
    "django-q>=1.3.9",
    "pycountry>=23.12.11",
    "llama-index>=0.12.0",
    "firecrawl>=1.15.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "html2text>=2025.4.15",
    "django-ckeditor>=6.7.0",
    "llama-index-llms-openai>=0.6.12",
    "llama-index-core>=0.14.10",
    "langfuse>=3.11.2",
    "openinference-instrumentation-llama-index>=4.3.9",
    "google-analytics-data>=0.19.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-django>=4.0.0",
    "pytest-sugar>=0.9.4",
    "flake8>=3.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest-django>=4.0.0",
    "pytest-sugar>=0.9.4",
    "flake8>=3.8.4",
]
